test/struct.ruse
// fail

struct S {
    a int
}

func main() {
    var i int
    i.a // error

    var a S
    a.b // error

    // S {.a = 0}
    // S {.b = 0} // error
}
